newclay/test/Compiler/Propagation/Fail/BindingDeclaredTypeMismatch2/main.clay
define main;
overload main() {
    var x:Int = true;
}

